MODUL-298 - Change style of parent selected

--- a/src/components/menu-item/menu-item.html
+++ b/src/components/menu-item/menu-item.html
@@ -1,5 +1,6 @@
 <li class="m-menu-item"
     :class="{'m--is-selected': selected,
+             'm--is-item-selected': itemSelected,
              'm--is-disabled': isDisabled,
              'm--has-icon': hasIcon,
              'm--is-group': group,
