--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -13,8 +13,8 @@
             <div class="m-navbar__wrap" role="menubar" ref="wrap">
                 <ul class="m-navbar__list" aria-hidden="true" ref="list">
                     <slot></slot>
-                    <li aria-hidden="true" class="m-navbar__line" v-if="isLightSkin" ref="light"></li>
-                    <li aria-hidden="true" class="m-navbar__arrow" v-if="isArrowSkin" ref="arrow"></li>
+                    <li aria-hidden="true" class="m-navbar__line" v-if="isTabUnderlineSkin" ref="tab-underline"></li>
+                    <li aria-hidden="true" class="m-navbar__arrow" v-if="isTabArrowSkin" ref="tab-arrow"></li>
                 </ul>
             </div>
         </div>
