--- a/src/components/rich-text/rich-text.sandbox.html
+++ b/src/components/rich-text/rich-text.sandbox.html
@@ -1,54 +1,40 @@
 <div>
-    <!-- Sandbox template -->
     <h3>Froala Text Editor</h3>
     <p class="m-u--margin-bottom">
-        fonctionne sans options spécifiée
+        Fonctionne sans options spécifiée
     </p>
-    <p>
-        <div style="margin-bottom: 30px;">
-            <div><button @click="focus = !focus">Change focus (now: {{ focus }})</button></div>
-            <div>
-                Error message: <input type="text" v-model="errorMessage" />
-            </div>
-            <div>
-                Valid message: <input type="text" v-model="validMessage" />
-            </div>
-            <div>
-                Helper message: <input type="text" v-model="helperMessage" />
-            </div>
-            <div><button @click="waiting = !waiting">Waiting (now: {{ waiting }})</button></div>
-            <div><button @click="disabled = !disabled">Disabled (now: {{ disabled }})</button></div>
-        </div>
-        <div>
-            <m-rich-text-edit v-model="model"
-                :toolbar-sticky-offset="58"
-                :label="'test123123'"
-                :max-width="'large'"
-                :placeholder="'some placeholder'"
-                :focus="focus"
-                :error="error"
-                :error-message="errorMessage"
-                :valid-message="validMessage"
-                :helper-message="helperMessage"
-                :waiting="waiting"
-                :disabled="disabled"></m-rich-text-edit>
-            <m-textfield label="'test123123'" :waiting="waiting" :disabled="disabled"></m-textfield>
-            <div><m-rich-text :value="model"></m-rich-text></div>
-        </div>
-    </p>
-    <div>
-        <button @click="afficherFormulairePleinePage = !afficherFormulairePleinePage">Afficher formulaire pleine page</button>
-        <m-edit-window :open.sync="afficherFormulairePleinePage">
-            <template slot="header">
-                <span class="m-u--h2 m-u--font-weight--bold">
-                    <m-i18n k="texte:texte"></m-i18n>
-                </span>
-            </template>
-            <div>
-                <m-rich-text-edit :scrollable-container="'.m-edit-window__body'" class="p-formulaire-texte__textearea" :label="'pouet'"
-                    tag-style="p" max-width="720px" v-model="fullScreenFormModel"></m-rich-text-edit>
-            </div>
-        </m-edit-window>
+    <div class="m-u--margin-top">
+        <m-button @click="focus = !focus">Change focus (now: {{ focus }})</m-button>
+        <m-button @click="waiting = !waiting">Waiting (now: {{ waiting }})</m-button>
+        <m-button @click="disabled = !disabled">Disabled (now: {{ disabled }})</m-button>
     </div>
-
+    <div class="m-u--margin-top">
+        <m-textfield label="Error message" v-model="errorMessage"></m-textfield>
+        <m-textfield label="Valid message" v-model="validMessage" :disabled="errorMessage"></m-textfield>
+        <m-textfield label="Helper message" v-model="helperMessage"></m-textfield>
+    </div>
+    <m-rich-text-edit class="m-u--margin-top--l"
+        v-model="model"
+        :toolbar-sticky-offset="58"
+        label="RichText"
+        :max-width="'large'"
+        :placeholder="'some placeholder'"
+        :focus="focus"
+        :error="error"
+        :error-message="errorMessage"
+        :valid-message="validMessage"
+        :helper-message="helperMessage"
+        :waiting="waiting"
+        :disabled="disabled"></m-rich-text-edit>
+    <m-rich-text class="m-u--margin-top" :value="model"></m-rich-text>
+    <m-edit-window>
+        <m-button class="m-u--margin-top--l" slot="trigger">Afficher formulaire pleine page</m-button>
+        <h2 class="m-u--no-margin" slot="header">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae impedit sed quod necessitatibus incidunt itaque numquam ipsum quam earum, quisquam ea, assumenda quibusdam porro eveniet magnam accusantium expedita, recusandae optio.
+        </h2>
+        <div>
+            <m-rich-text-edit scrollable-container=".m-edit-window__body" class="p-formulaire-texte__textearea" :label="'pouet'"
+                tag-style="p" max-width="720px" v-model="fullScreenFormModel"></m-rich-text-edit>
+        </div>
+    </m-edit-window>
 </div>
