rename sandbox label

--- a/src/components/rich-text-editor/rich-text-editor.sandbox.html
+++ b/src/components/rich-text-editor/rich-text-editor.sandbox.html
@@ -19,7 +19,7 @@
     <div class="m-u--margin-bottom">
         <m-rich-text-editor v-model="model"
         :toolbar-sticky-offset="58"
-        :label="'test123123'"
+        :label="'texte riche'"
         :max-width="'large'"
         :placeholder="'some placeholder'"
         :focus="focus"
