Updated snapshot, updated svg sprites.

--- a/src/components/error-template/error-template.sandbox.html
+++ b/src/components/error-template/error-template.sandbox.html
@@ -56,7 +56,7 @@
 
     <h5>with content in slot</h5>
     <div style="border: solid 1px black; padding: 10px; width: 600px;">
-        <m-error-template skin="error" :title="title" iconName="error-system-not-available" :hints="manyHints" :links="manyLinks">
+        <m-error-template skin="error" :title="title" iconName="error" :hints="manyHints" :links="manyLinks">
             <span>
                 <b>***Custom error details content through slot.***</b>
             </span>
