--- a/src/components/tree/tree.sandbox.html
+++ b/src/components/tree/tree.sandbox.html
@@ -2,12 +2,16 @@
     <h2>Default tree</h2>
     <div style="width: 50%; float:left;">
         <h2>No selection</h2>
-        <p><m-tree :tree="tree" :isAllOpen="true"></m-tree></p>
+        <p>
+            <m-tree :tree="tree" selectionMode="0" ></m-tree>
+        </p>
     </div>
 
     <div style="width: 50%; float:left;">
         <h2>Single node selection</h2>
-        <p><m-tree :tree="tree" :isAllOpen="true" selectionQuantity="1" :selectedNodes="currentFile2" @newNodeSelected="newNodeSelected" selectionIcon="information"></m-tree></p>
+        <p>
+            <m-tree :tree="tree" :selectedNodes="currentFile2" @select="onSelect"></m-tree>
+        </p>
     </div>
 
     <div style="clear: both;"></div>
@@ -15,12 +19,16 @@
     <h2>File tree</h2>
     <div style="width: 50%; float:left;">
         <h3>No file selection</h3>
-        <p><m-tree :tree="fileTree" :fileTree="true"></m-tree></p>
+        <p>
+            <m-tree :tree="fileTree" selectionMode="0" :icons="true"></m-tree>
+        </p>
     </div>
 
     <div style="width: 50%; float:left;">
         <h3>Single file selection</h3>
-        <p><m-tree :tree="fileTree" selectionQuantity="1" :selectedNodes="currentFile" :fileTree="true" :isAllOpen="false" @newNodeSelected="newNodeSelected" selectionIcon="information"></m-tree></p>
+        <p>
+            <m-tree :tree="fileTree" selectionMode="1" :selectedNodes="currentFile" :icons="true" @select="onSelect"></m-tree>
+        </p>
     </div>
 
     <div style="clear: both;"></div>
@@ -29,12 +37,16 @@
 
     <div style="width: 50%; float:left;">
         <h3>Nodes error</h3>
-        <p><m-tree :tree="errorTree" :fileTree="true"></m-tree></p>
+        <p>
+            <m-tree :tree="errorTree"></m-tree>
+        </p>
     </div>
 
     <div style="width: 50%; float:left;">
         <h3>Empty tree</h3>
-        <p><m-tree :tree="emptyTree"></m-tree></p>
+        <p>
+            <m-tree :tree="emptyTree"></m-tree>
+        </p>
     </div>
 
     <div style="clear: both;"></div>
@@ -42,7 +54,9 @@
     <div style="width: 50%; float:left;">
         <h3>Selected node not found</h3>
         <span>Console error</span>
-        <p><m-tree :tree="tree" :selectedNodes="wrongCurrentFile" selectionQuantity="1" @newNodeSelected="newNodeSelected"></m-tree></p>
+        <p>
+            <m-tree :tree="tree" :selectedNodes="wrongCurrentFile" @select="onSelect"></m-tree>
+        </p>
     </div>
 
 </div>
