--- a/src/components/tree-node/tree-node.html
+++ b/src/components/tree-node/tree-node.html
@@ -1,30 +1,23 @@
-<li class="m-tree-node">
-    <div v-if="hasValidChildren" class="m-tree-node__with-children">
-        <div class="m-tree-node__with-children__header" @click="toggleChildrenVisibility">
-            <!-- <span class="m-tree-node__with-children__header__icon" :class="{ 'm--is-closed': open}"></span> -->
-            <m-tree-icon v-if="fileTree" :file="node.content" :is-folder-open="open" :is-a-folder="true"></m-tree-icon>
-            <span>{{ nodeTitle }}</span>
-        </div>
-        <transition name="m-tree-node__with-children__body">
-            <ul v-show="open" class="m-tree-node__with-children__body">
-                <template v-if="childrenNotEmpty">
-                    <m-tree-node v-for="childrensNode in node.children" :key="childrensNode.nodeId" class="m-tree-node__with-children__children"
-                        :current-path="propCurrentPath" :file-tree="fileTree" :selection-quantity="selectionQuantity" :selection-icon="selectionIcon"
-                        :node="childrensNode" :selected-nodes="selectedNodes" :all-open="allOpen" @newNodeSelectected="selectNewNode"
-                        @generateErrorTree="generateErrorTree" @selectedNodeFound="selectedNodeFound"></m-tree-node>
-                </template>
-                <li v-else class="m-tree-node__with-children__no-children" ref="empty-node-txt">
-                    <m-i18n k="m-tree-node:empty"></m-i18n>
+<li class="m-tree-node" ref="item">
+    <m-link :mode="linkMode" class="m-tree-node__single-node" :class="{ 'm--is-selected': isSelected }" :disabled="linkDisabled"
+        :underline="false" @click="onClick" ref="link">
+        <m-tree-icon class="m-tree-icon" v-if="icons" :filename="node.id" :folder-open="open" :folder="isFolder"></m-tree-icon>
+        <span>{{ label }}</span>
+    </m-link>
+    <div v-if="isFolder" class="m-tree-node__with-children">
+        <m-accordion-transition v-if="hasChildren">
+            <ul v-show="open" class="m-tree-node__with-children__body" :class="{'m-tree-node__line-extension' : hasSibling}" ref="childNodeList">
+                <m-tree-node v-for="(childNode, index) in node.children" :key="childNode.id" class="m-tree-node__with-children__children"
+                    :path="currentPath" :icons="icons" :selectable="selectable" :node="childNode" :selected-nodes="selectedNodes"
+                    :has-sibling="childHasSibling(index)" @click="onChildClick"></m-tree-node>
+            </ul>
+        </m-accordion-transition>
+        <m-accordion-transition v-else>
+            <ul v-show="open" class="m-tree-node__with-children__body" :class="{'m-tree-node__line-extension' : hasSibling}">
+                <li class="m-tree-node__with-children__children--empty">
+                    {{emptyContentMessage}}
                 </li>
             </ul>
-        </transition>
+        </m-accordion-transition>
     </div>
-    <template v-else-if="validNode">
-        <m-link :mode="typeLink" class="m-tree-node__single-node" :class="{ 'm--is-node-selected': nodeSelected }" :disabled="inactiveButton"
-            @click="selectNewNode(propCurrentPath)">
-            <m-tree-icon class="m-tree-icon" v-if="fileTree" :file="node.content"></m-tree-icon>
-            <span>{{ nodeTitle }}</span>
-        </m-link>
-        <m-icon v-if="selectedIcon" :name="selectionIcon"></m-icon>
-    </template>
 </li>
