--- a/src/components/tree-node/tree-node.scss
+++ b/src/components/tree-node/tree-node.scss
@@ -1,4 +1,5 @@
 @import '../../styles/abstracts/variables';
+@import '../accordion/accordion-transition';
 
 $m-tree-node--icon-width: 18px;
 $m-tree-node--icon-height: 18px;
@@ -9,18 +10,28 @@ $m-accordion--icon-minus-width: 1px;
 .m-tree-node {
     color: $m-color--ul-blue;
 
+    & + &,
+    &__with-children__body > & {
+        margin-top: $m-margin;
+    }
+
     &__single-node {
-        margin-bottom: $m-margin;
         user-select: none;
         border: 1px solid $m-color--ul-blue;
         border-radius: 22px;
         padding: 9px 21px;
         width: $m-min-width;
 
-        &.m--is-node-selected {
+        &.m--is-selected,
+        &.m--is-button.m--is-button:hover {
             color: #fff;
             background-color: $m-color--interactive-darker;
             border-color: $m-color--interactive-darker;
+        }
+
+        &.m--is-text-link {
+            color: $m-color--grey-light;
+            border-color: $m-color--grey-light;
         }
     }
 
@@ -30,79 +41,18 @@ $m-accordion--icon-minus-width: 1px;
         text-overflow: ellipsis;
     }
 
+    &__line-extension::before {
+        content: "";
+        position: absolute;
+        left: -22px;
+        width: 1px;
+        top: 0;
+        bottom: 0;
+        background-color: $m-color--ul-blue;
+    }
+
     &__with-children {
         user-select: none;
-
-        &__header {
-            cursor: pointer;
-            margin-bottom: $m-margin;
-            border: 1px solid $m-color--ul-blue;
-            border-radius: 22px;
-            padding: 9px 21px;
-            width: $m-min-width;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-
-            &__icon {
-                width: $m-tree-node--icon-width;
-                height: $m-tree-node--icon-height;
-                margin-right: $m-margin--xs;
-                border-width: $m-tree-node--icon-border-width;
-                border-color: $m-color--interactive;
-                border-style: solid;
-                display: inline-block;
-                text-align: center;
-                position: relative;
-
-                &::before,
-                &::after {
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    content: '';
-                    background: $m-color--interactive;
-                    transform: translate3d(-50%, -50%, 0);
-                    transition: transform $m-transition-duration ease;
-                }
-
-                &::before {
-                    width: $m-accordion--icon-plus-width;
-                    height: $m-accordion--icon-minus-width;
-                }
-
-                &::after {
-                    transition: transform $m-transition-duration ease, opacity 0.6s ease;
-                    width: $m-accordion--icon-minus-width;
-                    height: $m-accordion--icon-plus-width;
-                }
-
-                &.m--is-closed {
-                    &::before,
-                    &::after {
-                        transform: translate3d(-50%, -50%, 0) rotate(90deg);
-                    }
-
-                    &::before {
-                        opacity: 0;
-                    }
-                }
-            }
-        }
-
-        &__body {
-            &-enter-active,
-            &-leave-active {
-                transition: all 0.5s;
-                height: auto;
-            }
-
-            &-enter,
-            &-leave-to {
-                transform: translateY(-5px);
-                opacity: 0;
-            }
-        }
 
         &__children {
             margin-left: 52px;
@@ -123,7 +73,7 @@ $m-accordion--icon-minus-width: 1px;
                 position: absolute;
                 left: -22px;
                 width: 1px;
-                top: -12px;
+                top: -$m-margin;
                 height: 56px;
                 background-color: $m-color--ul-blue;
             }
@@ -131,12 +81,12 @@ $m-accordion--icon-minus-width: 1px;
             &:last-child::after {
                 height: 34px;
             }
-        }
 
-        &__no-children {
-            margin-left: $m-margin--l + 6;
-            margin-bottom: $m-margin--s;
-            color: $m-color--disabled;
+            &--empty {
+                margin-left: 30px;
+                margin-top: $m-margin;
+                color: $m-color--text;
+            }
         }
     }
 }
