--- a/src/components/link/link.html
+++ b/src/components/link/link.html
@@ -3,6 +3,7 @@
                  :class="{ 'm--is-unvisited': isUnvisited,
                            'm--is-disabled': disabled,
                            'm--no-underline': !underline,
+                           'm--is-skin-text': isSkinText,
                            'm--is-skin-light': isSkinLight,
                            'm--has-right-icon' : isIconPositionRight,
                            'm--has-left-icon' : isIconPositionLeft }"
@@ -21,7 +22,7 @@
                  'm--is-disabled': disabled,
                  'm--no-underline': !underline,
                  'm--is-button': isButton,
-                 'm--is-text-link': isTextLink,
+                 'm--is-skin-text': isSkinText,
                  'm--is-skin-light': isSkinLight,
                  'm--has-right-icon' : isIconPositionRight,
                  'm--has-left-icon' : isIconPositionLeft }"
