--- a/src/components/error-template/error-template.scss
+++ b/src/components/error-template/error-template.scss
@@ -4,7 +4,7 @@
     &__title {
         font-size: $m-font-size--h3;
         text-align: center;
-        max-width: 250px;
+        max-width: 250px; // Magic number
         margin: 0 auto;
 
         .m--is-skin-information & {
