--- a/src/components/rich-text-editor/adapter/vue-froala.scss
+++ b/src/components/rich-text-editor/adapter/vue-froala.scss
@@ -111,6 +111,7 @@
         }
 
         /deep/ .fr-toolbar {
+            height: 40px;
             margin-top: 0;
             padding: 0;
             opacity: 1;
